syntax = "proto3";

package protocol;

message NewTcpConnection {
	uint64 connection_id = 1;
	bytes remote_address = 2;
	int32 destination_port = 3;
	int32 source_port = 4;
	bytes local_address = 5;
}

message TcpData {
	uint64 connection_id = 1;
	bytes bytes = 2;
}

message TcpClose {
	uint64 connection_id = 1;
}

message LayerTcp {
	oneof inner {
		int32 port_subscribe = 1;
		uint64 connection_unsubscribe = 2;
		int32 port_unsubscribe = 3;
	}
}

message DaemonTcp {
	oneof inner {
		NewTcpConnection new_tcp_connection = 1;
		TcpData tcp_data = 2;
		TcpClose tcp_close = 3;
	}
}
